Add completed timer app

--- a/timer-20-20-20.html
+++ b/timer-20-20-20.html
@@ -2,22 +2,23 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>Reading Timer</title>
-  <link rel="stylesheet" href="/custom-timer/css/Reading-app.css">
+  <title>20ルールタイマー</title>
+  <link rel="stylesheet" href="/custom-timer/css/app-20.css">
 </head>
 <body>
   <div class="timer-app">
+
     <a href="/custom-timer/index.html" class="close-btn">
       <img  src="/custom-timer//img/close-btn.png" alt="close" class="btn-img">
     </a>
 
     <!-- タイマー表示 -->
     <div class="timer-display-wrapper">
-        <img src="/custom-timer/img/Reading1.png" alt="Reading..." class="img">
-        <p class="text">Reading...</p>
+        <img src="/custom-timer/img/20-20-20-work1.png" alt="working..." class="img">
+        <p class="text">Working...</p>
     </div>
     <div class="timer-display">
-      <span id="minutes">10</span>:<span id="seconds">00</span>
+      <span id="minutes">20</span>:<span id="seconds">00</span>
     </div>
 
     <!-- コントロールボタン -->
@@ -28,6 +29,6 @@
     </div>
   </div>
 
-  <script src="/custom-timer/js/app-Read.js"></script>
+  <script src="/custom-timer/js/app-20.js"></script>
 </body>
 </html>
