fixed img issue

--- a/Reading-timer.html
+++ b/Reading-timer.html
@@ -8,12 +8,12 @@
 <body>
   <div class="timer-app">
     <a href="/custom-timer/index.html" class="close-btn">
-      <img  src="/custom-timer//img/close-btn.png" alt="close" class="btn-img">
+      <img  src="./img/close-btn.png" alt="close" class="btn-img">
     </a>
 
     <!-- タイマー表示 -->
     <div class="timer-display-wrapper">
-        <img src="/custom-timer/img/Reading1.png" alt="Reading..." class="img">
+        <img src="./img/Reading1.png" alt="Reading..." class="img">
         <p class="text">Reading...</p>
     </div>
     <div class="timer-display">
