--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
   <link rel="stylesheet" href="./css/style-home.css">
 </head>
 <body>
-  <audio id="close-btn-sound" src="/custom-timer/sounds/決定ボタンを押す35.mp3"></audio>
-  <audio id="app-hover-sound" src="/custom-timer/sounds/決定ボタンを押す42.mp3"></audio>
-  <audio id="home-bgm" src="/custom-timer/sounds/butterflies-amp-flowers-222527.mp3" loop></audio>
+  <audio id="close-btn-sound" src="./sounds/決定ボタンを押す35.mp3"></audio>
+  <audio id="app-hover-sound" src="./sounds/決定ボタンを押す42.mp3"></audio>
+  <audio id="home-bgm" src="./sounds/butterflies-amp-flowers-222527.mp3" loop></audio>
 
   <div class="app">
     <button class="close-btn">
-      <img  src="/custom-timer/img/close-btn.png" alt="close" class="btn-img">
+      <img  src="./img/close-btn.png" alt="close" class="btn-img">
     </button>
 
     <button id="mute-btn" style="background:none; border:none; cursor:pointer; font-size:24px;">
@@ -24,25 +24,25 @@
     <div class="icon-grid">
       <div class="icon">
         <a href="/custom-timer/timer-20-20-20.html">
-          <img class="icon-img" src="/custom-timer/img/20-20-20_Timer.png" alt="20-20-20 Timer" >
+          <img class="icon-img" src="./img/20-20-20_Timer.png" alt="20-20-20 Timer" >
         </a>
         <p class="app-title timer-20-20-20">20-20-20 Timer</p>
       </div>
       <div class="icon">
         <a href="/custom-timer/pomodoro.html">
-          <img class="icon-img" src="/custom-timer/img/Pomodoro_Timer.png" alt="Pomodoro Timer">
+          <img class="icon-img" src="./img/Pomodoro_Timer.png" alt="Pomodoro Timer">
         </a>
         <p class="app-title pomodoro">Pomodoro Timer</p>
       </div>
       <div class="icon">
         <a href="/custom-timer/Stretching-timer.html">
-          <img class="icon-img" src="/custom-timer/img/Stretch_timer.png" alt="Stretching Timer">
+          <img class="icon-img" src="./img/Stretch_timer.png" alt="Stretching Timer">
         </a>
         <p class="app-title stretching-timer">Stretching Timer</p>
       </div>
       <div class="icon">
         <a href="/custom-timer/Reading-timer.html">
-          <img class="icon-img" src="/custom-timer/img/Reading_timer.png" alt="Reading Timer">
+          <img class="icon-img" src="./img/Reading_timer.png" alt="Reading Timer">
         </a>
         <p class="app-title reading-timer">Reading Timer</p>
       </div>
