--- a/timer-20-20-20.html
+++ b/timer-20-20-20.html
@@ -9,12 +9,12 @@
   <div class="timer-app">
 
     <a href="/custom-timer/index.html" class="close-btn">
-      <img  src="/custom-timer//img/close-btn.png" alt="close" class="btn-img">
+      <img  src="./img/close-btn.png" alt="close" class="btn-img">
     </a>
 
     <!-- タイマー表示 -->
     <div class="timer-display-wrapper">
-        <img src="/custom-timer/img/20-20-20-work1.png" alt="working..." class="img">
+        <img src="./img/20-20-20-work1.png" alt="working..." class="img">
         <p class="text">Working...</p>
     </div>
     <div class="timer-display">
