--- a/pomodoro.html
+++ b/pomodoro.html
@@ -8,14 +8,14 @@
 <body>
   <div class="timer-app">
     <a href="/custom-timer/index.html" class="close-btn">
-      <img src="/custom-timer/img/close-btn.png" alt="close" class="btn-img">
+      <img src="./img/close-btn.png" alt="close" class="btn-img">
     </a>
 
-    <img src="/custom-timer/img/pomodoro1.png" alt="" class="pomodoro-img">
+    <img src="./img/pomodoro1.png" alt="" class="pomodoro-img">
 
     <!-- タイマー表示 -->
     <div class="timer-display-wrapper">
-      <img src="/custom-timer/img/donut.png" alt="donut" class="donut-marker">
+      <img src="./img/donut.png" alt="donut" class="donut-marker">
       <p class="text">Focus</p>
     </div>
 
