--- a/Stretching-timer.html
+++ b/Stretching-timer.html
@@ -28,6 +28,6 @@
     </div>
   </div>
 
-  <script src="/custom-timer/js/app-Stretch.js"></script>
+  <script src="./js/app-Stretch.js"></script>
 </body>
 </html>
