--- a/pomodoro.html
+++ b/pomodoro.html
@@ -31,6 +31,6 @@
     </div>
   </div>
 
-  <script src="/custom-timer/js/app-pomodoro.js"></script>
+  <script src="./js/app-pomodoro.js"></script>
 </body>
 </html>
