--- a/timer-20-20-20.html
+++ b/timer-20-20-20.html
@@ -29,6 +29,6 @@
     </div>
   </div>
 
-  <script src="/custom-timer/js/app-20.js"></script>
+  <script src="./js/app-20.js"></script>
 </body>
 </html>
