--- a/Stretching-timer.html
+++ b/Stretching-timer.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <title>Reading Timer</title>
-  <link rel="stylesheet" href="/custom-timer/css/Stretching-app.css">
+  <link rel="stylesheet" href="./css/Stretching-app.css">
 </head>
 <body>
   <div class="timer-app">
-    <a href="/custom-timer/index.html" class="close-btn">
+    <a href="./index.html" class="close-btn">
       <img  src="./img/close-btn.png" alt="close" class="btn-img">
     </a>
 
