--- a/pomodoro.html
+++ b/pomodoro.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <title>Pomodoro timer</title>
-  <link rel="stylesheet" href="/custom-timer/css/pomodoro-app.css">
+  <link rel="stylesheet" href="./css/pomodoro-app.css">
 </head>
 <body>
   <div class="timer-app">
-    <a href="/custom-timer/index.html" class="close-btn">
+    <a href="./index.html" class="close-btn">
       <img src="./img/close-btn.png" alt="close" class="btn-img">
     </a>
 
