--- a/timer-20-20-20.html
+++ b/timer-20-20-20.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <title>20ルールタイマー</title>
-  <link rel="stylesheet" href="/custom-timer/css/app-20.css">
+  <link rel="stylesheet" href="./css/app-20.css">
 </head>
 <body>
   <div class="timer-app">
 
-    <a href="/custom-timer/index.html" class="close-btn">
+    <a href="./index.html" class="close-btn">
       <img  src="./img/close-btn.png" alt="close" class="btn-img">
     </a>
 
