--- a/index.html
+++ b/index.html
@@ -23,25 +23,25 @@
 
     <div class="icon-grid">
       <div class="icon">
-        <a href="https://jelly-sweet.github.io/custom-timer/timer-20-20-20.html">
+        <a href="/custom-timer/timer-20-20-20.html">
           <img class="icon-img" src="./img/20-20-20_Timer.png" alt="20-20-20 Timer" >
         </a>
         <p class="app-title timer-20-20-20">20-20-20 Timer</p>
       </div>
       <div class="icon">
-        <a href="https://jelly-sweet.github.io/custom-timer/pomodoro.html">
+        <a href="/custom-timer/pomodoro.html">
           <img class="icon-img" src="./img/Pomodoro_Timer.png" alt="Pomodoro Timer">
         </a>
         <p class="app-title pomodoro">Pomodoro Timer</p>
       </div>
       <div class="icon">
-        <a href="https://jelly-sweet.github.io/custom-timer/Stretching-timer.html">
+        <a href="/custom-timer/Stretching-timer.html">
           <img class="icon-img" src="./img/Stretch_timer.png" alt="Stretching Timer">
         </a>
         <p class="app-title stretching-timer">Stretching Timer</p>
       </div>
       <div class="icon">
-        <a href="https://jelly-sweet.github.io/custom-timer/Reading-timer.html">
+        <a href="/custom-timer/Reading-timer.html">
           <img class="icon-img" src="./img/Reading_timer.png" alt="Reading Timer">
         </a>
         <p class="app-title reading-timer">Reading Timer</p>
